Adds new svg demo

--- a/demo.html
+++ b/demo.html
@@ -10,8 +10,8 @@
             <rect width='100%' height='100%' rx='15' fill='#00442a'/>
             <g transform='translate(10, 10)'>
                 <rect width='270' height='480' rx='12' fill='#FFFFFF12' /><g transform='translate(0, 0)'>
-                <text x='20' y='35' font-family='IBM Plex Mono' font-size='16' fill='white'>NOUNS DAO LOT</text>
-                <text x='20' y='50' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7'>NOUNS.DAO.LOT/IDEA-1</text>
+                <text x='20' y='35' font-family='IBM Plex Mono' font-size='16' fill='white'>WAVE Protocol</text>
+                <text x='20' y='50' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7'>wave.wtf/ideas/1</text>
             </g>
             <g transform='translate(0, 80)'>
                 <text x='20' y='35' font-family='IBM Plex Mono' font-size='16' fill='white' opacity='.7'>IDEA</text>
@@ -26,17 +26,17 @@
                     </text>
                 </g>
             </g>
-            <g transform='translate(0, 360)'>
-                <text x='20' y='20' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x5b38da6a701c568545dcfcb03fcb875f56beddc4</text>
-                <text x='250' y='20' font-family='IBM Plex Mono' font-size='16' fill='white' class='right'>500</text>
-                <text x='20' y='40' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0xab8483f64d9c6d1ecf9b849ae677dd3315835cb2</text>
-                <text x='250' y='40' font-family='IBM Plex Mono' font-size='16' fill='white' class='right'>400</text>
-                <text x='20' y='60' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x4b20993bc481177ec7e8f571cecae8a9e22c02db</text>
-                <text x='250' y='60' font-family='IBM Plex Mono' font-size='16' fill='white' class='right'>300</text>
-                <text x='20' y='80' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x78731d3ca6b7e34ac0f824c42a7cc18a495cabab</text>
-                <text x='250' y='80' font-family='IBM Plex Mono' font-size='16' fill='white' class='right'>200</text>
-                <text x='20' y='100' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x617f2e2fd72fd9d5503197092ac168c91465e7f2</text>
-                <text x='250' y='100' font-family='IBM Plex Mono' font-size='16' fill='white' class='right'>100</text>
+        <g transform='translate(0, 360)'>
+                <text x='20' y='20' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x5b38da...beddc4</text>
+                <text x='250' y='20' font-family='IBM Plex Mono' font-size='12' fill='white' class='right'>500</text>
+                <text x='20' y='40' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x5b38da...beddc4</text>
+                <text x='250' y='40' font-family='IBM Plex Mono' font-size='12' fill='white' class='right'>400</text>
+                <text x='20' y='60' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x5b38da...beddc4</text>
+                <text x='250' y='60' font-family='IBM Plex Mono' font-size='12' fill='white' class='right'>300</text>
+                <text x='20' y='80' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x5b38da...beddc4</text>
+                <text x='250' y='80' font-family='IBM Plex Mono' font-size='12' fill='white' class='right'>200</text>
+                <text x='20' y='100' font-family='IBM Plex Mono' font-size='10' fill='white' opacity='.7' class='left'>0x5b38da...beddc4</text>
+                <text x='250' y='100' font-family='IBM Plex Mono' font-size='12' fill='white' class='right'>100</text>
             </g>
         </g>
     </svg>
